updated ghost to use non-linear timestamps

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <div id="data" style="height: 100%; width: 80%; display: flex; flex-direction: column; align-items: center; justify-content: center"> <!-- justify-content: center;   -->
     <div style="width: 100%; height: 10%; display: flex; align-items: center; justify-content: center;"><p id="currentPlayer" style="font-size: 50px">currPlayer</p></div>
     <div style="width: 100%; height: 43%; display: flex;align-items: center; justify-content: center;"><p id="time">0</p><p style="font-size: 100px; align-self: flex-end; position: relative; bottom: 60px;">s</p></div>
-    <div style="width: 0; height: 4%; background-color: white; z-index: 10000; align-self: flex-start" id="ghost-bar"></div>
+    <div style="width: 0; height: 4%; background-color: white; z-index: 10000; align-self: flex-start; transition: linear 0.05s" id="ghost-bar"></div>
     <div style="width: 100%; height: 43%;display: flex;align-items: center; justify-content: center;"><p id="distance">0</p><p style="font-size: 100px; align-self: flex-end; position: relative; bottom:60px;">m</p></div>
   </div>
   <div id="scoreboard" style="height: 100%; width: 20%; display: flex; flex-direction: column; align-items: flex-start; justify-content: space-between; font-size: 30px;">
