--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       color: grey;
       font-family: Poppins, sans-serif;
       margin: 0;
+      z-index: -999;
     }
     p {
       font-size: 400px;
@@ -78,12 +79,12 @@
   </style>
 </head>
 <body style="height: 100%; width: 100%; display: flex">
-
+<div id="background-progress-bar" style="position: absolute; width: 100%; height: 100%; z-index: -998; background-color: gold"></div>
 
 
 
 <div style="height: 100%; width: 70%; display: flex;" class="hide-on-connect">
-  <button id="StartScan" class="button-3" style="top: 15px; left: 15px; height: 300px; width: 300px;
+  <button id="start-ble-button" class="button-3" style="top: 15px; left: 15px; height: 300px; width: 300px;
    align-self: center; justify-self: center; margin: auto"><i style="font-size: 200px" class="fa fa-bluetooth"></i><p style="font-size: 20px; position: relative; top: 15px;">Connect die shit</p></button>
 
 </div>
@@ -91,10 +92,10 @@
   <textarea id="textarea" name="players" rows="4" cols="50" style="background-color: #171717; color: white; border: none; font-size: 30px; margin-top: 30px; margin-bottom: 30px; margin-right: 10px; resize: none">Players,Seperated,By,Comma</textarea>
 </div>
 
-<button id="NextPlayer" class="button-3" style="top: 15px; left: 50px; height: 100px; width: 100px;
+<button id="next-player-button" class="button-3" style="top: 15px; left: 50px; height: 100px; width: 100px;
    align-self: center; justify-self: center; margin: auto; position: absolute"><i style="font-size: 40px" class="fa fa-arrow-right"></i><p style="font-size: 10px; position: relative; top: 0px;">Next Player</p></button>
 
-<button id="Check1" class="button-3" style="top: 200px; left: 50px; height: 100px; width: 100px;
+<button id="reset-button" class="button-3" style="top: 200px; left: 50px; height: 100px; width: 100px;
    align-self: center; justify-self: center; margin: auto; position: absolute"><i style="font-size: 40px" class="fa fa-refresh"></i><p style="font-size: 10px; position: relative; top: 15px;">Reset</p></button>
 
 <!--<button id="Debug" class="button-3" style="top: 400px; left: 15px; height: 100px; width: 100px;
