--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
-<html style="height: 100%">
+<html style="height: 100%" lang="en-US">
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta charset="UTF-8">
   <title>RowMatron 1.0</title>
   <style>
+    .ergometer-logo {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100px;
+      width: 100px;
+    }
+
+    .wheel {
+      background-color: #333;
+      border-radius: 50%;
+      height: 60px;
+      width: 60px;
+    }
+
+    .pedal {
+      background-color: #333;
+      border-radius: 10px;
+      height: 20px;
+      width: 40px;
+      position: relative;
+      top: -30px;
+      left: 20px;
+    }
+
     body {
       background-color: black;
       color: grey;
@@ -47,9 +72,8 @@
       touch-action: manipulation;
       vertical-align: middle;
       white-space: nowrap;
-      margin: 10px 10px 10px 10px;
-      margin-left: 30px;
-                                                     }
+      margin: 10px 10px 10px 30px;
+    }
 
     .button-3:focus:not(:focus-visible):not(.focus-visible) {
       box-shadow: none;
@@ -76,27 +100,69 @@
       background-color: #5a81ff;;
       box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
     }
+
+    @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
+
+    .logo {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100px;
+      width: 100px;
+    }
+
+    .circle {
+      background-color: #333;
+      border-radius: 50%;
+      height: 100px;
+      width: 100px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .text {
+      font-family: 'Oswald', sans-serif;
+      color: white;
+      font-size: 20px;
+      text-align: center;
+    }
+
+    p {
+      margin: 0;
+    }
   </style>
 </head>
 <body style="height: 100%; width: 100%; display: flex">
-<div id="background-progress-bar" style="position: absolute; width: 100%; height: 100%; z-index: -998; background-color: gold"></div>
+<div id="background-progress-bar" style="position: absolute; width: 100%; height: 100%; z-index: -998; background-color: transparent"></div>
 
 
-
-<div style="height: 100%; width: 70%; display: flex;" class="hide-on-connect">
-  <button id="start-ble-button" class="button-3" style="top: 15px; left: 15px; height: 300px; width: 300px;
+<div style="height: 100%; width: 100%; display: flex; z-index: 10000;" class="hide-on-connect">
+  <div style="height: 100%; width: 70%; display: flex;" class="hide-on-connect">
+    <button id="start-ble-button" class="button-3" style="top: 15px; left: 15px; height: 300px; width: 300px;
    align-self: center; justify-self: center; margin: auto"><i style="font-size: 200px" class="fa fa-bluetooth"></i><p style="font-size: 20px; position: relative; top: 15px;">Connect die shit</p></button>
 
-</div>
-<div style="height: 100%; width: 30%; display: flex;" class="hide-on-connect">
-  <textarea id="textarea" name="players" rows="4" cols="50" style="background-color: #171717; color: white; border: none; font-size: 30px; margin-top: 30px; margin-bottom: 30px; margin-right: 10px; resize: none">Players,Seperated,By,Comma</textarea>
+  </div>
+  <div style="height: 100%; width: 30%; display: flex;" class="hide-on-connect">
+    <textarea id="textarea" name="players" rows="4" cols="50" style="background-color: #171717; color: white; border: none; font-size: 30px; margin-top: 30px; margin-bottom: 30px; margin-right: 10px; resize: none">Players,Seperated,By,Comma</textarea>
+  </div>
+
 </div>
 
-<button id="next-player-button" class="button-3" style="top: 15px; left: 50px; height: 100px; width: 100px;
-   align-self: center; justify-self: center; margin: auto; position: absolute"><i style="font-size: 40px" class="fa fa-arrow-right"></i><p style="font-size: 10px; position: relative; top: 0px;">Next Player</p></button>
+<div class="logo" style="position: absolute; top: 15px; left: 15px">
+  <div class="circle">
+    <p class="text">Row</p>
+    <p class="text">Matron</p>
+  </div>
+</div>
 
-<button id="reset-button" class="button-3" style="top: 200px; left: 50px; height: 100px; width: 100px;
-   align-self: center; justify-self: center; margin: auto; position: absolute"><i style="font-size: 40px" class="fa fa-refresh"></i><p style="font-size: 10px; position: relative; top: 15px;">Reset</p></button>
+
+<button id="next-player-button" class="button-3" style="top: 200px; left: 50px; height: 100px; width: 100px;
+   align-self: center; justify-self: center; margin: auto; position: absolute; display: none;"><i style="font-size: 40px" class="fa fa-arrow-right"></i><p style="font-size: 10px; position: relative; top: 0px;">Next Player</p></button>
+
+<button id="reset-button" class="button-3" style="top: 400px; left: 50px; height: 100px; width: 100px;
+   align-self: center; justify-self: center; margin: auto; position: absolute; display: none;"><i style="font-size: 40px" class="fa fa-refresh"></i><p style="font-size: 10px; position: relative; top: 15px;">Reset</p></button>
 
 <!--<button id="Debug" class="button-3" style="top: 400px; left: 15px; height: 100px; width: 100px;
    align-self: center; justify-self: center; margin: auto; position: absolute"><i style="font-size: 40px" class="fa fa-ship"></i><p style="font-size: 10px; position: relative; top: 15px;">Debug</p></button>
@@ -105,7 +171,7 @@
    align-self: center; justify-self: center; margin: auto; position: absolute"><i style="font-size: 40px" class="fa fa-cab"></i><p style="font-size: 10px; position: relative; top: 15px;">Polling</p></button>
 -->
 
-<div id="holder" style="height: 100%; width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: center">
+<div id="holder" style="height: 100%; width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
 
 
 
