--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <meta charset="UTF-8">
   <title>RowMatron 1.0</title>
   <style>
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
+    /* Firefox */
+    input[type=number] {
+      -moz-appearance: textfield;
+    }
+
     .ergometer-logo {
       display: flex;
       justify-content: center;
@@ -43,7 +54,6 @@
       font-family: Poppins,sans-serif ;
       margin: 0;
       user-select: none;
-      cursor: none;
     }
     li {
       border-bottom: 1px grey;
@@ -109,6 +119,8 @@
       align-items: center;
       height: 100px;
       width: 100px;
+      user-select: none;
+      cursor: none;
     }
 
     .circle {
@@ -120,6 +132,8 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      user-select: none;
+      cursor: none;
     }
 
     .text {
@@ -127,6 +141,8 @@
       color: white;
       font-size: 20px;
       text-align: center;
+      user-select: none;
+      cursor: none;
     }
 
     p {
@@ -135,7 +151,13 @@
   </style>
 </head>
 <body style="height: 100%; width: 100%; display: flex">
-<div id="background-progress-bar" style="position: absolute; width: 100%; height: 100%; z-index: -998; background-color: transparent"></div>
+<div class="logo" style="position: relative; top: 15px; left: 15px; cursor: none;">
+  <div class="circle" style="cursor: none;">
+    <p class="text" style="cursor: none;">Row</p>
+    <p class="text" style="cursor: none;">Matron</p>
+  </div>
+</div>
+<div id="background-progress-bar" style="position: absolute; width: 0; height: 100%; z-index: -998; background-color: blue; transition: linear 50ms"></div>
 
 
 <div style="height: 100%; width: 100%; display: flex; z-index: 10000;" class="hide-on-connect">
@@ -144,18 +166,19 @@
    align-self: center; justify-self: center; margin: auto"><i style="font-size: 200px" class="fa fa-bluetooth"></i><p style="font-size: 20px; position: relative; top: 15px;">Connect die shit</p></button>
 
   </div>
-  <div style="height: 100%; width: 30%; display: flex;" class="hide-on-connect">
-    <textarea id="textarea" name="players" rows="4" cols="50" style="background-color: #171717; color: white; border: none; font-size: 30px; margin-top: 30px; margin-bottom: 30px; margin-right: 10px; resize: none">Players,Seperated,By,Comma</textarea>
+  <div style="height: 100%; width: 30%; display: flex; flex-direction: column;" class="hide-on-connect">
+    <h3>Players:</h3>
+    <textarea id="textarea" name="players" rows="4" cols="50" style="background-color: #171717; color: white; border: none; font-size: 30px; margin-top: 0px; margin-bottom: 30px; margin-right: 10px; resize: none; height: 50%; padding: 15px; border-radius: 15px;">Players,Seperated,By,Comma</textarea>
+    <h3>Distance:</h3>
+    <div style="display: flex; height: 30px;">
+      <input id="distance-input" value="100" type="number" style="background-color: #171717; color: white; border: none; font-size: 30px; width: 70px; padding: 3px 3px 0 3px;border-radius: 5px;"></input>
+      <p style="font-size: 30px; position: relative; top: -2px; color: white;">m</p>
+    </div>
   </div>
 
 </div>
 
-<div class="logo" style="position: absolute; top: 15px; left: 15px">
-  <div class="circle">
-    <p class="text">Row</p>
-    <p class="text">Matron</p>
-  </div>
-</div>
+
 
 
 <button id="next-player-button" class="button-3" style="top: 200px; left: 50px; height: 100px; width: 100px;
@@ -178,7 +201,7 @@
   <div id="data" style="height: 100%; width: 80%; display: flex; flex-direction: column; align-items: center; justify-content: center"> <!-- justify-content: center;   -->
     <div style="width: 100%; height: 10%; display: flex; align-items: center; justify-content: center;"><p id="currentPlayer" style="font-size: 50px">currPlayer</p></div>
     <div style="width: 100%; height: 43%; display: flex;align-items: center; justify-content: center;"><p id="time">0</p><p style="font-size: 100px; align-self: flex-end; position: relative; bottom: 60px;">s</p></div>
-    <div style="width: 0; height: 4%; background-color: white; z-index: 10000; align-self: flex-start; transition: linear 0.05s" id="ghost-bar"></div>
+    <div style="width: 0; height: 4%; background-color: white; z-index: 10000; align-self: flex-start; transition: linear 50ms" id="ghost-bar"></div>
     <div style="width: 100%; height: 43%;display: flex;align-items: center; justify-content: center;"><p id="distance">0</p><p style="font-size: 100px; align-self: flex-end; position: relative; bottom:60px;">m</p></div>
   </div>
   <div id="scoreboard" style="height: 100%; width: 20%; display: flex; flex-direction: column; align-items: flex-start; justify-content: space-between; font-size: 30px;">
